update new expired time

--- a/WebApi_Authorization_Demo/WebApi_Authorization_Demo/WebApi_Authorization_Demo.csproj
+++ b/WebApi_Authorization_Demo/WebApi_Authorization_Demo/WebApi_Authorization_Demo.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -275,9 +276,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Properties\PublishProfiles\oauthoriztion - FTP %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\oauthoriztion - FTP.pubxml" />
-    <None Include="Properties\PublishProfiles\oauthoriztion - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\oauthoriztion - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
